--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,10 @@
       <section class="screen-wrap">
         <div class="screen-header">
           <h1>Raspberry Pi UI Preview</h1>
-          <p>Keyboard: <code>1/2/3</code>, <code>Enter</code>, <code>Backspace/Delete</code>, <code>A-D</code></p>
+          <p>
+            Keyboard: <code>1/2/3</code>, <code>Enter</code>, <code>Backspace/Delete</code>, <code>A-D</code>,
+            <code>#</code>, <code>*</code>
+          </p>
         </div>
         <div class="pi-screen" id="pi-screen">
           <div class="title" id="title"></div>
